# multimodal-rag-chatbot

./: README.md  cspell.json  package-lock.json
iac/: package.json
iac/asset/langfuse/: Dockerfile
iac/lib/: constant.ts  langfuse-stack.ts  main-stack.ts
server/: .dockerignore  Dockerfile  pyproject.toml  slack_bot_handler.py
server/scripts/: .env.example  index_documents.py
server/server/rag/: __init__.py  model.py  rag.py  retriever.py
server/server/rag/ingestion/: __init__.py  document_indexer.py  document_preprocessor.py  extract_image_converter.py  image_describer.py  model.py  s3_store.py
server/server/slack/: app.py  utils.py
server/server/utils/: env.py
