[tool.poetry]
name = "server"
version = "0.0.0"
description = ""
authors = ["tanimon <8575113+tanimon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.35.31"
html2text = "^2024.2.26"
langchain = ">=0.3,<0.4"
langchain-aws = ">=0.2,<0.3"
langchain-community = ">=0.3,<0.4"
langchain-core = ">=0.3,<0.4"
langchain-pinecone = ">=0.2,<0.3"
langchainhub = "^0.1.16"
langfuse = "^2.51.2"
markdownify = "^0.13.1"
opensearch-py = "^2.7.1"
ragas = "^0.1.10"
requests = "^2.32.3"
requests-aws4auth = "^1.3.1"
slack-bolt = "^1.20.1"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["essential"], version = "^1.35.31"}
ipykernel = "^6.29.5"
jawsume = "^0.1.0"
pytest = "^8.3.3"
python-dotenv = "^1.0.1"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-sort]
enabled = true
